--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -32,9 +32,9 @@ a {
 #hdr_header {
     font-family: 'Edu TAS Beginner', cursive;
     font-family: 'Kalam', cursive;
-    position: sticky;
-    top: 0;
-    z-index: 3;
+    position: sticky !important;
+    top: 0 !important;
+    z-index: 3 !important;
 }
 
 #header {
