--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -180,14 +180,14 @@ a {
     opacity: 1;
 }
 
-.before-content {
+.mae {
     position: relative;
     left: 70px;
     top: 25px;
     opacity: 0;
 }
 
-.after-content {
+.ato {
     position: relative;
     left: 0;
     top: 0;
