--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -51,6 +51,9 @@ a {
     color: #000;
 }
 
+#header .navbar .navbar-toggler {
+    border: none;
+}
 
 #header .navbar .navbar-toggler:focus {
     box-shadow: none !important;
