--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -291,6 +291,7 @@ a {
 
 #kakogawa1 {
     text-align: center;
+    padding: 10px;
     margin-bottom: 60px;
 }
 
@@ -321,6 +322,7 @@ a {
 
 #ookini1 {
     text-align: center;
+    padding: 10px;
     margin-bottom: 60px;
 }
 
@@ -379,6 +381,7 @@ a {
 
 #main .animate_fadeIn .profile {
     text-align: center;
+    padding: 10px;
     margin: 30px auto 80px auto;
 }
 
@@ -412,6 +415,7 @@ a {
 
 #zenni-figskate23 {
     text-align: center;
+    padding: 10px;
     margin-bottom: 60px;
 }
 
