--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -185,6 +185,7 @@ a {
     opacity: 1;
 }
 
+/*
 .mae {
     opacity: 0;
 }
@@ -193,6 +194,8 @@ a {
     opacity: 1;
     transition: all 2.5s;
 }
+
+*/
 
 
 /* about
