--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -574,40 +574,49 @@ a {
 
 #zenni-figskate23 .animate_fadeIn .daihyo-wo h4 {
     font-size: 1.3rem;
+    color: #000;
     margin-bottom: 25px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-wo p {
     font-size: 1rem;
+    color: #000;
     margin-bottom: 15px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-me h4 {
     font-size: 1.3rem;
+    color: #000;
     margin-bottom: 25px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-me p {
     font-size: 1rem;
+    color: #000;
     margin-bottom: 15px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-pe h4 {
     font-size: 1.3rem;
+    color: #000;
     margin-bottom: 25px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-pe p {
     font-size: 1rem;
+    color: #000;
     margin-bottom: 15px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-ice h4 {
     font-size: 1.3rem;
+    color: #000;
     margin-bottom: 25px;
 }
 
 #zenni-figskate23 .animate_fadeIn .daihyo-ice p {
     font-size: 1rem;
+    color: #000;
     margin-bottom: 15px;
 }
+
