--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -578,7 +578,7 @@ a {
     margin-bottom: 25px;
 }
 
-#zenni-figskate23 .animate_fadeIn .daihyo-wo p {
+#zenni-figskate23 .animate_fadeIn .daihyo-wo h6 {
     font-size: 1rem;
     color: #000;
     margin-bottom: 15px;
@@ -590,7 +590,7 @@ a {
     margin-bottom: 25px;
 }
 
-#zenni-figskate23 .animate_fadeIn .daihyo-me p {
+#zenni-figskate23 .animate_fadeIn .daihyo-me h6 {
     font-size: 1rem;
     color: #000;
     margin-bottom: 15px;
@@ -602,7 +602,7 @@ a {
     margin-bottom: 25px;
 }
 
-#zenni-figskate23 .animate_fadeIn .daihyo-pe p {
+#zenni-figskate23 .animate_fadeIn .daihyo-pe h6 {
     font-size: 1rem;
     color: #000;
     margin-bottom: 15px;
@@ -614,7 +614,7 @@ a {
     margin-bottom: 25px;
 }
 
-#zenni-figskate23 .animate_fadeIn .daihyo-ice p {
+#zenni-figskate23 .animate_fadeIn .daihyo-ice h6 {
     font-size: 1rem;
     color: #000;
     margin-bottom: 15px;
