--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -464,7 +464,7 @@ a {
 
 #zenni-figskate23 .animate__fadeIn h5 {
     font-size: 1.1rem;
-    margin: 20px auto 0 auto;
+    margin: 40px auto 50px auto;
 }
 
 #zenni-figskate23 .animate__fadeIn .skate-women,
