--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -247,6 +247,8 @@ a {
 #spo-news .news-content p a {
     font-size: 1rem;
     color: #000;
+    border-bottom: solid 1px #000;
+    padding-bottom: 4px;
     margin-bottom: 5px;
 }
 
